# ai-cpp-course

./: .gitignore  .gitmodules  CHEATSHEET.md  Dockerfile  Dockerfile.gpu  README.md  SYLLABUS.md  TROUBLESHOOTING.md  dockerfile
.github/workflows/: ci.yml  release.yml  wheel_matrix.yml
ai-cpp-l1/: CMakeLists.txt  README.md  ai-cpp-l1.md  portable_simd_sum_vectors.cpp  setup.md  sum.py
ai-cpp-l10/: README.md  ai-cpp-l10.md  optimization_rounds.py  test_integration_optimization.py  test_optimization.py  tracker_pipeline.py  tracker_pipeline_optimized.py
ai-cpp-l11/: CMakeLists.txt  README.md  ai-cpp-l11.md  asan_example.cpp  memory_safety_demo.cpp  safe_views.cpp  safety_demo.py  test_integration_safety.py  test_safety.py
ai-cpp-l2/: CMakeLists.txt  README.md  ai-cpp-l2.md  cpp_image_processor.cpp  crop_resize.py  opencv_benchmark.py
ai-cpp-l3/: README.md  ai-cpp-l3.md
ai-cpp-l3/genertic_shared_memory_file/: CMakeLists.txt  ai-cpp-l3.md  async_runner.cpp  async_runner.hpp  async_runner_test.cpp  atomic_producer_consumer.hpp  atomic_semaphore.hpp  double_buffer_swapper_test.cpp  exception.cpp  flat_shared_memory.hpp  flat_shm_img_producer_consumer_nb.cpp  flat_shm_img_producer_consumer_py.cpp  flat_shm_impl.h  flat_shm_test.cpp  flat_type.hpp  flat_type_test.cpp  image.hpp  nanobind_example.py  neon_copy.hpp  semaphore_impl.h  shm_consumer.py  shm_producer.py
ai-cpp-l3/nanobind-example/: CMakeLists.txt  nanobind_example.cpp
ai-cpp-l4/: CMakeLists.txt  README.md  ai-cpp-l4.md  bbox_native.cpp  bbox_slow.py  benchmark_nanobind.py  buffer_pool_native.cpp  history_view_native.cpp  test_integration_nanobind.py  test_nanobind.py
ai-cpp-l5/: README.md  ai-cpp-l5.md  bbox_slots.py  benchmark_python_opt.py  binary_protocol.py  defensive_patterns.py  kalman_preallocated.py  numpy_views.py  preallocated_buffers.py  test_integration_python_opt.py  test_python_opt.py  thread_pool_io.py  torch_compile_demo.py
ai-cpp-l6/: CMakeLists.txt  README.md  ai-cpp-l6.md  benchmark_measurement.py  cache_benchmark.cpp  cache_explorer.py  gpu_timer.py  latency_timer.cpp  measure_latency.py  profile_pipeline.py  test_integration_measurement.py  test_measurement.py
ai-cpp-l7/: CMakeLists.txt  README.md  ai-cpp-l7.md  batch_inference_demo.py  benchmark_cuda_ipc.py  benchmark_gpu.py  cuda_basics.cu  cuda_ipc_consumer.cu  cuda_ipc_producer.cu  cuda_streams_demo.py  gpu_pipeline_demo.py  gpu_preprocess.cu  gpu_preprocess_cpu.cpp  pinned_allocator.cpp  test_gpu.py  test_integration_gpu.py  tracker_engine_fixes.py
ai-cpp-l7j/: README.md  benchmark_jetson.py  power_mode_demo.py  test_integration_jetson.py  test_jetson.py
ai-cpp-l8/: CMakeLists.txt  README.md  ai-cpp-l8.md  benchmark_concepts.py  compile_time_lut.cpp  concepts_demo.cpp  state_machine.cpp  state_machine_slow.py  test_concepts.py  test_integration_concepts.py
ai-cpp-l9/: CMakeLists.txt  Dockerfile.prod  README.md  ai-cpp-l9.md  build_and_test.sh  pyproject.toml  test_integration_package.py  test_package.py
ai-cpp-l9/src/tracker_utils/: __init__.py  _native.cpp  _native.pyi  bbox.py
assessment/: post_assessment.py  pre_assessment.py
capstone/: CMakeLists.txt  README.md  pyproject.toml
capstone/baseline/: benchmark_baseline.py  test_baseline.py  tracker_baseline.py
capstone/fast_tracker_utils/: __init__.py
capstone/solution/: benchmark_fast.py  test_fast.py  tracker_fast.py
capstone/src/: bindings.cpp
course/assignments/: assignment-1-pybind11-simd.md  assignment-2-shared-memory-pipeline.md  assignment-3-gpu-preprocessing.md  assignment-4-capstone.md
course/jetson/: Dockerfile.jetson  README.md  jetson-benchmarks.py  unified-memory-demo.cu
course/promo/: course-description.md  promo-video-script.md  target-audience.md
course/quizzes/: section-01-quiz.md  section-02-quiz.md  section-03-quiz.md  section-04-quiz.md  section-05-quiz.md  section-06-quiz.md  section-07-quiz.md  section-07j-quiz.md  section-08-quiz.md  section-09-quiz.md  section-10-quiz.md  section-11-quiz.md
course/slides/: section-00-intro.md  section-01-simd.md  section-02-cache.md  section-03-shared-memory.md  section-04-nanobind.md  section-05-python-optimization.md  section-06-measurement.md  section-07-gpu.md  section-07j-gpu-jetson.md  section-08-concepts.md  section-09-packaging.md  section-10-profiling.md  section-11-memory-safety.md  section-12-capstone.md  section-13-whats-next.md
tests/: conftest.py  run_all_tests.sh  validate_evidence.py
