[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tracker-utils"
dynamic = ["version"]
description = "C++ accelerated tracking utilities with nanobind bindings"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "numpy>=1.24",
]

[project.scripts]
tracker-bbox = "tracker_utils.cli:main"

[tool.scikit-build]
wheel.packages = ["src/tracker_utils"]
cmake.build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"

[tool.pytest.ini_options]
testpaths = ["."]
